Turns out that VirtualPathProvider (VPP) chaining is slow, especially in debug mode where 3 providers are chained. So decided to take a rather ugly approach in favor of max speed (VPP inheritance & minimizing number of method calls). Now view lookup is FUCKING fast, leading to fantastic cold & warm app startup times, even more in debug mode :-)

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -297,7 +297,7 @@
     <Compile Include="Bundling\IBundleProvider.cs" />
     <Compile Include="Bundling\IBundlePublisher.cs" />
     <Compile Include="Modelling\CommaSeparatedModelBinder.cs" />
-    <Compile Include="Plugins\PluginDebugViewVirtualPathProvider.cs" />
+    <Compile Include="Theming\SmartVirtualPathProvider.cs" />
     <Compile Include="Filters\PublicStoreAllowNavigationAttribute.cs" />
     <Compile Include="Routing\GuidConstraint.cs" />
     <Compile Include="Seo\GenericPathRoute.cs" />
