--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -271,13 +271,18 @@
     <Compile Include="Plugins\ProviderManager.cs" />
     <Compile Include="Seo\CanonicalHostNameAttribute.cs" />
     <Compile Include="SmartUrlRoutingModule.cs" />
+    <Compile Include="Theming\Assets\AssetTranslationUtil.cs" />
+    <Compile Include="Theming\Assets\CachedAsset.cs" />
+    <Compile Include="Theming\Assets\DefaultAssetCache.cs" />
+    <Compile Include="Theming\Assets\IAssetCache.cs" />
     <Compile Include="Theming\HttpHandlers\CssHttpHandlerBase.cs" />
     <Compile Include="Theming\HttpHandlers\SassCssHttpHandler.cs" />
     <Compile Include="Theming\LocalizedDisplayMode.cs" />
-    <Compile Include="Theming\ModuleImportsVirtualFile.cs" />
+    <Compile Include="Theming\Assets\ModuleImportsVirtualFile.cs" />
     <Compile Include="Theming\ThemeFileResolver.cs" />
     <Compile Include="Theming\InheritedVirtualThemeFile.cs" />
-    <Compile Include="Theming\BundlingVirtualPathProvider.cs" />
+    <Compile Include="Theming\Assets\BundlingVirtualPathProvider.cs" />
+    <Compile Include="Theming\Assets\AssetTranslator.cs" />
     <Compile Include="Theming\TwoLevelViewLocationCache.cs" />
     <Compile Include="Theming\WebViewPage.cs" />
     <Compile Include="Theming\WebViewPageHelper.cs" />
@@ -305,7 +310,7 @@
     <Compile Include="Settings\StoreDependingSettingData.cs" />
     <Compile Include="Settings\StoreDependingSettingHelper.cs" />
     <Compile Include="Theming\HttpHandlers\LessCssHttpHandler.cs" />
-    <Compile Include="Theming\SmartStyleBundle.cs" />
+    <Compile Include="Theming\Assets\SmartStyleBundle.cs" />
     <Compile Include="Theming\ThemeHelper.cs" />
     <Compile Include="Theming\ThemeVarsVirtualFile.cs" />
     <Compile Include="Theming\ThemingVirtualPathProvider.cs" />
@@ -450,7 +455,6 @@
       <Name>SmartStore.Data</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
