--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -10,7 +10,7 @@
       <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
       <section name="sassAndScss" type="BundleTransformer.SassAndScss.Configuration.SassAndScssSettings, BundleTransformer.SassAndScss" />
     </sectionGroup>
-  </configSections>
+  </configSections> 
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -77,7 +77,7 @@
     <sessionState configSource="Config\SessionState.config" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
     <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
-    <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="250" batch="true" optimizeCompilations="true"> 
+    <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="252" batch="true" optimizeCompilations="true"> 
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -345,8 +345,8 @@
       <css defaultPostProcessors="UrlRewritingCssPostProcessor, AutoprefixCssPostProcessor" defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" combineFilesBeforeMinification="false">
         <translators>  
           <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" enabled="true" />
-          <add name="SassAndScssTranslator" type="BundleTransformer.SassAndScss.Translators.SassAndScssTranslator, BundleTransformer.SassAndScss" />
+          <add name="LessTranslator" type="SmartStore.Web.Framework.Theming.Assets.LessTranslator, SmartStore.Web.Framework" />
+          <add name="SassTranslator" type="SmartStore.Web.Framework.Theming.Assets.SassTranslator, SmartStore.Web.Framework" enabled="true" />
         </translators>
         <postProcessors>
           <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="true" />
