(Perf) Finalized 'asset cache':  a file-system based cache storage for compiled Sass and Less files. Prevents time-consuming asset re-compilation on app startup. - Boosts startup time by ~2 sec. (if theme assets were not touched) - Saves ~50 MB RAM when no Sass compilation and 'Autoprefixing' occurs during app lifecycle - Autoprefixer has been turned off in debug mode. To turn it on again, set 'useInDebugMode' in 'bundleTransformer/core/css/postProcessors/add[@name=AutoprefixCssPostProcessor]' to true

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -350,7 +350,7 @@
         </translators>
         <postProcessors>
           <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="true" />
-          <add name="AutoprefixCssPostProcessor" type="BundleTransformer.Autoprefixer.PostProcessors.AutoprefixCssPostProcessor, BundleTransformer.Autoprefixer" useInDebugMode="true" />
+          <add name="AutoprefixCssPostProcessor" type="SmartStore.Web.Framework.Theming.Assets.AutoprefixPostProcessor, SmartStore.Web.Framework" useInDebugMode="false" />
         </postProcessors>
         <minifiers>
           <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
@@ -377,11 +377,11 @@
       </js>
       <assetHandler disableServerCache="false" serverCacheDurationInMinutes="1440" disableClientCache="false" />
     </core>
-    <less useNativeMinification="false" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
+    <less useNativeMinification="true" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
       <!-- ATTENTION: If you experience problems with the "V8JsEngine", use "MsieJsEngine" instead -->
       <jsEngine name="V8JsEngine" />
     </less>
-    <sassAndScss useNativeMinification="false" indentType="Space" indentWidth="2" lineFeedType="CrLf" precision="5" sourceComments="false" />
+    <sassAndScss useNativeMinification="true" indentType="Space" indentWidth="2" lineFeedType="CrLf" precision="5" sourceComments="false" />
     <autoprefixer cascade="false" add="true" remove="true" supports="true" flexbox="true" grid="true">
       <browsers>
         <add conditionalExpression="&gt; 1%" /> 
