--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -501,6 +501,10 @@
     <Compile Include="Migrations\201706020759565_UpdateMediaPath.Designer.cs">
       <DependentUpon>201706020759565_UpdateMediaPath.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707190940318_V302Resources.cs" />
+    <Compile Include="Migrations\201707190940318_V302Resources.Designer.cs">
+      <DependentUpon>201707190940318_V302Resources.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -912,6 +916,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706020759565_UpdateMediaPath.resx">
       <DependentUpon>201706020759565_UpdateMediaPath.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707190940318_V302Resources.resx">
+      <DependentUpon>201707190940318_V302Resources.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
