--- a/src/Plugins/SmartStore.AmazonPay/SmartStore.AmazonPay.csproj
+++ b/src/Plugins/SmartStore.AmazonPay/SmartStore.AmazonPay.csproj
@@ -139,6 +139,9 @@
     <Compile Include="..\..\AssemblyVersionInfo.cs">
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
+    <Content Include="Content\SmartStore.AmazonPay.css">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Controllers\AmazonPayCheckoutController.cs" />
     <Compile Include="Controllers\AmazonPayController.cs" />
     <Compile Include="Controllers\AmazonPayControllerBase.cs" />
