--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -505,6 +505,10 @@
     <Compile Include="Migrations\201707190940318_V302Resources.Designer.cs">
       <DependentUpon>201707190940318_V302Resources.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707281452589_TierPriceCalcMethod.cs" />
+    <Compile Include="Migrations\201707281452589_TierPriceCalcMethod.Designer.cs">
+      <DependentUpon>201707281452589_TierPriceCalcMethod.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -919,6 +923,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707190940318_V302Resources.resx">
       <DependentUpon>201707190940318_V302Resources.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707281452589_TierPriceCalcMethod.resx">
+      <DependentUpon>201707281452589_TierPriceCalcMethod.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
