--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -384,7 +384,7 @@
     <Compile Include="Messages\NewsLetterSubscriptionService.cs" />
     <Compile Include="News\NewsService.cs" />
     <Compile Include="News\INewsService.cs" />
-    <Compile Include="Customers\CustomerExtentions.cs" />
+    <Compile Include="Customers\CustomerExtensions.cs" />
     <Compile Include="Directory\UpdateExchangeRateTask.cs" />
     <Compile Include="Directory\IExchangeRateProvider.cs" />
     <Compile Include="Discounts\CheckDiscountRequirementRequest.cs" />
