--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -2043,6 +2043,7 @@
     <Content Include="Themes\Flex\Content\_block.scss" />
     <Content Include="Themes\Flex\Content\_choice.scss" />
     <Content Include="Themes\Flex\Content\_layout.scss" />
+    <Content Include="Views\ShoppingCart\Partials\_RewardPointsBox.cshtml" />
     <None Include="Web.EFMigrations.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
