Closes #509 implement flag for topics that aren't allowed to be deleted

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -509,6 +509,10 @@
     <Compile Include="Migrations\201707281452589_TierPriceCalcMethod.Designer.cs">
       <DependentUpon>201707281452589_TierPriceCalcMethod.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708251628482_SystemTopics.cs" />
+    <Compile Include="Migrations\201708251628482_SystemTopics.Designer.cs">
+      <DependentUpon>201708251628482_SystemTopics.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -926,6 +930,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707281452589_TierPriceCalcMethod.resx">
       <DependentUpon>201707281452589_TierPriceCalcMethod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708251628482_SystemTopics.resx">
+      <DependentUpon>201708251628482_SystemTopics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
