--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -435,6 +435,8 @@
     <Compile Include="Validators\Catalog\ProductValidator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bs4\js\bootstrap.js" />
+    <Content Include="Content\bs4\js\bootstrap.min.js" />
     <Content Include="Content\filemanager\css\images\animated-overlay.gif" />
     <Content Include="Content\filemanager\css\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\filemanager\css\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -757,9 +759,52 @@
     <Content Include="Content\filemanager\lang\ru.json" />
     <Content Include="Content\filemanager\lang\sk.json" />
     <Content Include="Content\filemanager\lang\tr.json" />
+    <Content Include="Content\bs4\scss\bootstrap-grid.scss" />
+    <Content Include="Content\bs4\scss\bootstrap-reboot.scss" />
+    <Content Include="Content\bs4\scss\bootstrap.scss" />
+    <Content Include="Content\bs4\scss\_alert.scss" />
+    <Content Include="Content\bs4\scss\_badge.scss" />
+    <Content Include="Content\bs4\scss\_breadcrumb.scss" />
+    <Content Include="Content\bs4\scss\_button-group.scss" />
+    <Content Include="Content\bs4\scss\_buttons.scss" />
+    <Content Include="Content\bs4\scss\_card.scss" />
+    <Content Include="Content\bs4\scss\_carousel.scss" />
+    <Content Include="Content\bs4\scss\_close.scss" />
+    <Content Include="Content\bs4\scss\_code.scss" />
+    <Content Include="Content\bs4\scss\_custom-forms.scss" />
+    <Content Include="Content\bs4\scss\_dropdown.scss" />
+    <Content Include="Content\bs4\scss\_forms.scss" />
+    <Content Include="Content\bs4\scss\_functions.scss" />
+    <Content Include="Content\bs4\scss\_grid.scss" />
+    <Content Include="Content\bs4\scss\_images.scss" />
+    <Content Include="Content\bs4\scss\_input-group.scss" />
+    <Content Include="Content\bs4\scss\_jumbotron.scss" />
+    <Content Include="Content\bs4\scss\_list-group.scss" />
+    <Content Include="Content\bs4\scss\_media.scss" />
+    <Content Include="Content\bs4\scss\_mixins.scss" />
+    <Content Include="Content\bs4\scss\_modal.scss" />
+    <Content Include="Content\bs4\scss\_nav.scss" />
+    <Content Include="Content\bs4\scss\_navbar.scss" />
+    <Content Include="Content\bs4\scss\_pagination.scss" />
+    <Content Include="Content\bs4\scss\_popover.scss" />
+    <Content Include="Content\bs4\scss\_print.scss" />
+    <Content Include="Content\bs4\scss\_progress.scss" />
+    <Content Include="Content\bs4\scss\_reboot.scss" />
+    <Content Include="Content\bs4\scss\_tables.scss" />
+    <Content Include="Content\bs4\scss\_tooltip.scss" />
+    <Content Include="Content\bs4\scss\_transitions.scss" />
+    <Content Include="Content\bs4\scss\_type.scss" />
+    <Content Include="Content\bs4\scss\_utilities.scss" />
+    <Content Include="Content\bs4\scss\_variables.scss" />
+    <Content Include="Content\theme.scss" />
     <None Include="Scripts\jquery-1.8.3.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.3.js" />
     <Content Include="Scripts\jquery-1.8.3.min.js" />
+    <Content Include="Scripts\jquery-3.2.1.js" />
+    <Content Include="Scripts\jquery-3.2.1.min.js" />
+    <Content Include="Scripts\jquery-migrate-3.0.0.js" />
+    <Content Include="Scripts\jquery-migrate-3.0.0.min.js" />
+    <Content Include="Scripts\jquery-shims.js" />
     <Content Include="Scripts\jquery.tmpl.min.js" />
     <Content Include="Scripts\admin.globalinit.js" />
     <Content Include="Scripts\smartstore.download.js" />
@@ -1408,7 +1453,10 @@
   <ItemGroup>
     <Content Include="Views\Product\_CreateOrUpdateProductTag.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Content\bs4\scss\mixins\" />
+    <Folder Include="Content\bs4\scss\utilities\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\DeliveryTime\List.cshtml" />
   </ItemGroup>
