--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -866,6 +866,8 @@
     <Content Include="Content\bs4\scss\utilities\_text.scss" />
     <Content Include="Content\bs4\scss\utilities\_visibility.scss" />
     <Content Include="Content\skinning\_select2.scss" />
+    <Content Include="Content\shared\_utils.scss" />
+    <Content Include="Content\shared\_mixins.scss" />
     <None Include="Content\telerik\_telerik.scss" />
     <Content Include="Content\_legacy.scss" />
     <Content Include="Content\vendors\select2\scss\_dropdown.scss" />
