--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -2,12 +2,15 @@
 <siteMap>
   
     <siteMapNode id="home" title="Home" controller="Home" action="Overview" area="Admin">
-      
+    
+    <!--
+      Top nodes use 'fontastic' icon font, children use 'font-awesome'
+    -->
       
     <siteMapNode id="dashboard" title="Dashboard" resKey="Admin.Dashboard" controller="Home" action="Index" area="Admin" iconClass="home" />
       
       
-    <siteMapNode id="catalog" title="Catalog" resKey="Admin.Catalog" permissionNames="ManageCatalog" iconClass="cubes">
+    <siteMapNode id="catalog" title="Catalog" resKey="Admin.Catalog" permissionNames="ManageCatalog" iconClass="cube">
       <siteMapNode id="categories" isGroupHeader="true" title="Categories" resKey="Admin.Catalog.Categories" />
       <siteMapNode id="categories-list" title="List" resKey="Admin.Common.List" controller="Category" action="List" area="Admin" iconClass="bars" />
       <siteMapNode id="categories-tree" title="Tree view" resKey="Admin.Common.Treeview" controller="Category" action="Tree" area="Admin" iconClass="sitemap" />
@@ -27,7 +30,7 @@
     </siteMapNode>
 
       
-    <siteMapNode id="sales" title="Sales" resKey="Admin.Sales" permissionNames="ManageOrders, ManageReturnRequests, ManageGiftCards" iconClass="bar-chart-o">
+    <siteMapNode id="sales" title="Sales" resKey="Admin.Sales" permissionNames="ManageOrders, ManageReturnRequests, ManageGiftCards" iconClass="chart-growth">
       <siteMapNode id="orders" iconClass="bar-chart-o" title="Orders" resKey="Admin.Orders" permissionNames="ManageOrders" controller="Order" action="List" area="Admin" />
       <siteMapNode id="shipments" iconClass="truck fa-flip-horizontal" title="Shipments" resKey="Admin.Orders.Shipments.List" permissionNames="ManageOrders" controller="Order" action="ShipmentList" area="Admin" />
       <siteMapNode id="recurring-payments" iconClass="repeat" title="Recurring payments" resKey="Admin.RecurringPayments" permissionNames="ManageOrders" controller="RecurringPayment" action="List" area="Admin" />
@@ -42,7 +45,7 @@
     </siteMapNode>
 
       
-    <siteMapNode id="users" title="Customers" resKey="Admin.Customers" permissionNames="ManageCustomers, ManageCustomerRoles, ManageExternalAuthenticationMethods, ManageActivityLog" iconClass="group">
+    <siteMapNode id="users" title="Customers" resKey="Admin.Customers" permissionNames="ManageCustomers, ManageCustomerRoles, ManageExternalAuthenticationMethods, ManageActivityLog" iconClass="users2">
       <siteMapNode id="customers" iconClass="user" title="Customers" resKey="Admin.Customers.Customers" permissionNames="ManageCustomers" controller="Customer" action="List" area="Admin" />
       <siteMapNode id="customer-roles" iconClass="group" title="Customer roles" resKey="Admin.Customers.CustomerRoles" permissionNames="ManageCustomerRoles" controller="CustomerRole" action="List" area="Admin" />
       <siteMapNode id="online-customers" iconClass="sign-in" title="Online customers" resKey="Admin.Customers.OnlineCustomers" permissionNames="ManageCustomers" controller="OnlineCustomer" action="List" area="Admin" />
@@ -61,7 +64,7 @@
     </siteMapNode>
 
       
-    <siteMapNode id="cms" title="CMS" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates" iconClass="folder-open-o">
+    <siteMapNode id="cms" title="CMS" resKey="Admin.ContentManagement" permissionNames="ManagePolls, ManageNews, ManageBlog, ManageWidgets, ManageTopics, ManageForums, ManageMessageTemplates" iconClass="site-map">
       <siteMapNode id="topics" iconClass="file-o" title="Pages &amp; Topics" resKey="Admin.ContentManagement.Topics" permissionNames="ManageTopics" controller="Topic" action="List" area="Admin" />
       <siteMapNode id="news" iconClass="rss" title="News" resKey="Admin.ContentManagement.News" permissionNames="ManageNews" area="Admin" >
         <siteMapNode id="news-items" title="News items" resKey="Admin.ContentManagement.News.NewsItems" controller="News" action="List" area="Admin" />
@@ -79,7 +82,7 @@
 
       
     <siteMapNode id="configuration" title="Configuration" resKey="Admin.Configuration" permissionNames="ManageCountries,ManageLanguages,ManageSettings,ManagePaymentMethods,ManageTaxSettings,ManageShippingSettings,ManageCurrencies,ManageDeliveryTimes,ManageMeasures,ManageActivityLog,ManageACL,ManageSMSProviders,ManageEmailAccounts,ManageThemes,ManagePlugins"
-       iconClass="sliders">
+       iconClass="equalizer">
       <siteMapNode id="settings" iconClass="sliders" title="Settings" resKey="Admin.Configuration.Settings" permissionNames="ManageSettings">
         <siteMapNode id="general-settings" title="General and common settings" resKey="Admin.Configuration.Settings.GeneralCommon" controller="Setting" action="GeneralCommon" area="Admin" />
         <siteMapNode id="catalog-settings" title="Catalog settings" resKey="Admin.Configuration.Settings.Catalog" controller="Setting" action="Catalog" area="Admin" />
@@ -146,7 +149,7 @@
       <siteMapNode id="system-info" iconClass="info-circle" title="System information" resKey="Admin.System.SystemInfo" controller="Common" action="SystemInfo" area="Admin" />
     </siteMapNode>
 
-    <siteMapNode id="plugins" title="Plugins" resKey="Admin.Plugins" iconClass="puzzle-piece" permissionNames="ManagePlugins">
+    <siteMapNode id="plugins" title="Plugins" resKey="Admin.Plugins" iconClass="puzzle" permissionNames="ManagePlugins">
       <siteMapNode id="plugins-sep-1" isGroupHeader="true" title="[SKIP]" />
       <siteMapNode id="plugins-manage" iconClass="puzzle-piece" title="Manage plugins" resKey="Admin.Plugins.Manage" permissionNames="ManagePlugins" controller="Plugin" action="List" area="Admin"/>
     </siteMapNode>
