--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -868,6 +868,7 @@
     <Content Include="Content\skinning\_select2.scss" />
     <Content Include="Content\shared\_utils.scss" />
     <Content Include="Content\shared\_mixins.scss" />
+    <Content Include="Content\shared\_dropdown.scss" />
     <None Include="Content\telerik\_telerik.scss" />
     <Content Include="Content\_legacy.scss" />
     <Content Include="Content\vendors\select2\scss\_dropdown.scss" />
