--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -1021,6 +1021,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr.js" />
+    <Content Include="Scripts\smartstore.globalization.adapter.js" />
     <Content Include="Scripts\smartstore.globalization.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Themes\FlexBlue\preview.png" />
