--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -517,6 +517,10 @@
     <Compile Include="Migrations\201709141000226_V303Resources.Designer.cs">
       <DependentUpon>201709141000226_V303Resources.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709251538312_UpdateTrustedShopsTask.cs" />
+    <Compile Include="Migrations\201709251538312_UpdateTrustedShopsTask.Designer.cs">
+      <DependentUpon>201709251538312_UpdateTrustedShopsTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -940,6 +944,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709141000226_V303Resources.resx">
       <DependentUpon>201709141000226_V303Resources.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709251538312_UpdateTrustedShopsTask.resx">
+      <DependentUpon>201709251538312_UpdateTrustedShopsTask.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
