--- a/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
+++ b/src/Tests/SmartStore.Core.Tests/SmartStore.Core.Tests.csproj
@@ -84,6 +84,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\Directory\CurrencyTests.cs" />
     <Compile Include="FastPropertyTests.cs" />
     <Compile Include="PerformanceTests.cs" />
     <Compile Include="TopologicSortTests.cs" />
