--- a/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
+++ b/src/Presentation/SmartStore.Web/SmartStore.Web.csproj
@@ -320,6 +320,7 @@
     <Compile Include="Infrastructure\Routes\1_StoreRoutes.cs" />
     <Compile Include="Infrastructure\Routes\MapLegacyRoutesAttribute.cs" />
     <Compile Include="Infrastructure\DefaultFacetTemplateSelector.cs" />
+    <Compile Include="Infrastructure\SiteMapBuiltEventConsumer.cs" />
     <Compile Include="Models\Blogs\BlogPostListModel.cs" />
     <Compile Include="Models\Blogs\BlogPagingFilteringModel.cs" />
     <Compile Include="Models\Blogs\BlogPostTagModel.cs" />
