File in use notification not displayed when downloading import\export log file

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -58,7 +58,7 @@
     -->
     <add key="sm:MediaPublicPath" value="" />
     <add key="sm:BizImportMediaDirectory" value="Uploaded/static" />
-    <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.Redis, SmartStore.Azure, Srt.ErpConnector, SmartStore.DelticomImporter" />
+    <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.Redis, SmartStore.Azure, Srt.ErpConnector" />
     <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
     <add key="sm:TaskSchedulerSweepInterval" value="1" />
     <add key="g:RecaptchaWidgetUrl" value="https://www.google.com/recaptcha/api.js" />
