--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -525,6 +525,10 @@
     <Compile Include="Migrations\201710102038287_CurrencyRounding.Designer.cs">
       <DependentUpon>201710102038287_CurrencyRounding.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710252016556_IndexOptionNames.cs" />
+    <Compile Include="Migrations\201710252016556_IndexOptionNames.Designer.cs">
+      <DependentUpon>201710252016556_IndexOptionNames.cs</DependentUpon>
+    </Compile>
     <Compile Include="ObjectContextBase.SaveChanges.cs" />
     <Compile Include="Setup\Builder\ActivityLogTypeMigrator.cs" />
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
@@ -954,6 +958,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710102038287_CurrencyRounding.resx">
       <DependentUpon>201710102038287_CurrencyRounding.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710252016556_IndexOptionNames.resx">
+      <DependentUpon>201710252016556_IndexOptionNames.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
