DbHooks: * (Perf) Many improvements: disabling hooks during imports, implemented 'void' hooks by catching 'NotImplementedException' etc. * (Dev > Breaking change) Hook framework now passes 'IHookedEntity' interface instead of 'HookedEntity' class * (Fix) Hook framework should run hooks with 'ImportantAttribute' when hooking was disabled per scope

--- a/src/Tests/SmartStore.Core.Tests/App.config
+++ b/src/Tests/SmartStore.Core.Tests/App.config
@@ -2,12 +2,16 @@
 <configuration>
   <configSections>
     <section name="SmartStoreConfig" type="SmartStore.Core.Configuration.SmartStoreConfig, SmartStore.Core" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <SmartStoreConfig>
     <DynamicDiscovery Enabled="true" />
     <Engine Type="" />
-  </SmartStoreConfig> 
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup>
+  </SmartStoreConfig>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -20,4 +24,10 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
