--- a/src/Tests/SmartStore.Web.MVC.Tests/SmartStore.Web.MVC.Tests.csproj
+++ b/src/Tests/SmartStore.Web.MVC.Tests/SmartStore.Web.MVC.Tests.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Events\EventsTests.cs" />
     <Compile Include="Framework\Controllers\AdminAuthorizeAttributeTests.cs" />
     <Compile Include="Framework\Controllers\FormValueRequiredTests.cs" />
+    <Compile Include="Framework\WebApi\WebApiTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Public\Infrastructure\RouteTestingExtensions.cs" />
     <Compile Include="Public\Infrastructure\RoutesTests.cs" />
