--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -77,7 +77,7 @@
     <customErrors mode="RemoteOnly" />
     <sessionState configSource="Config\SessionState.config" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
-    <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" fcnMode="Disabled" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
     <compilation debug="true" targetFramework="4.5.2" numRecompilesBeforeAppRestart="250" batch="true" optimizeCompilations="true"> 
       <assemblies>
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
