Fixed js intellisense references

--- a/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
+++ b/src/Presentation/SmartStore.Web/Administration/SmartStore.Admin.csproj
@@ -449,6 +449,18 @@
     <Compile Include="Validators\Catalog\ProductValidator.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Scripts\underscore.js">
+      <Link>Scripts\Refs\underscore.js</Link>
+    </None>
+    <None Include="..\Scripts\underscore.mixins.js">
+      <Link>Scripts\Refs\underscore.mixins.js</Link>
+    </None>
+    <None Include="..\Scripts\underscore.string.js">
+      <Link>Scripts\Refs\underscore.string.js</Link>
+    </None>
+    <None Include="..\Scripts\modernizr.js">
+      <Link>Scripts\Refs\modernizr.js</Link>
+    </None>
     <Content Include="Content\vendors\colorpicker\js\bootstrap-colorpicker-globalinit.js" />
     <Content Include="Content\vendors\colorpicker\js\bootstrap-colorpicker.js" />
     <Content Include="Content\vendors\datetimepicker\js\tempusdominus-bootstrap-4.min.js" />
@@ -911,7 +923,7 @@
     <Content Include="Scripts\smartstore.download.js" />
     <Content Include="Scripts\smartstore.discountrules.js" />
     <Content Include="Scripts\smartstore.selectwrapper.js" />
-    <Content Include="Scripts\_references.js" />
+    <None Include="Scripts\_references.js" />
     <Content Include="sitemap.config">
       <SubType>Designer</SubType>
     </Content>
